--- a/report.ipynb
+++ b/report.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "id": "6366fb0f",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 3,
    "id": "0a55c4b1",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "9  air_ba937bf13d40fb24  2016-01-23        26"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "id": "58ea53c7",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "9  air_00a91d42b08b08d9  2016-07-10         0"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,12 +294,400 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a0c8b3fb",
+   "metadata": {},
+   "source": [
+    "### 2.2. `File date_info.csv`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f0729249",
+   "metadata": {},
+   "source": [
+    "- **Input:** file cung cấp cho chúng ta về thứ ngày tháng năm, với nhãn holiday_flg nhắm đánh dấu ngày đó có phải là ngày lễ không\n",
+    "- **Output:** sẽ có thêm 2 cột là 'prev_holiday_day' và 'after_holiday_day'\n",
+    "- **Phương pháp:** chúng ta sẽ thêm 2 biến 'prev_holiday_day' và 'after_holiday_day' với giá trị 0 để đánh dấu là ngày thường và 1 là ngày lễ \n",
+    "- **Mục đích:** để mô hình có thể học được rằng đó là ngày thường hay lễ và liệu có phải là lễ dài hay không"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
+   "id": "3d93ef27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>visit_date</th>\n",
+       "      <th>day_of_week</th>\n",
+       "      <th>is_holiday</th>\n",
+       "      <th>prev_holiday</th>\n",
+       "      <th>after_holiday</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2016-01-01</td>\n",
+       "      <td>Friday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2016-01-02</td>\n",
+       "      <td>Saturday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2016-01-03</td>\n",
+       "      <td>Sunday</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2016-01-04</td>\n",
+       "      <td>Monday</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2016-01-05</td>\n",
+       "      <td>Tuesday</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   visit_date day_of_week  is_holiday  prev_holiday  after_holiday\n",
+       "0  2016-01-01      Friday           1           0.0            1.0\n",
+       "1  2016-01-02    Saturday           1           1.0            1.0\n",
+       "2  2016-01-03      Sunday           1           1.0            0.0\n",
+       "3  2016-01-04      Monday           0           1.0            0.0\n",
+       "4  2016-01-05     Tuesday           0           0.0            0.0"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date_info = pd.read_csv('data/date_info.csv')\n",
+    "date_info.rename(columns = {'calendar_date' : 'visit_date', 'holiday_flg' : 'is_holiday'}, inplace = True)\n",
+    "date_info['prev_holiday'] = date_info['is_holiday'].shift().fillna(0)\n",
+    "date_info['after_holiday'] = date_info['is_holiday'].shift(-1).fillna(1)\n",
+    "date_info.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e556918c",
+   "metadata": {},
+   "source": [
+    "### 2.3. `File air_store_info.csv`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ee07ddfd",
+   "metadata": {},
+   "source": [
+    "- **Output:** sẽ cho chúng ta dữ liệu về cửa hàng với những dữ liệu như vị trí ...\n",
+    "- **Mục đích:** mô hình sẽ học về những thứ liên quan đến cửa hàng như vị trí ... để có thể thông qua thông tin của hàng để có thể đoán tốt hơn"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "fb7a774f",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>air_store_id</th>\n",
+       "      <th>air_genre_name</th>\n",
+       "      <th>air_area_name</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>latitude_str</th>\n",
+       "      <th>longitude_str</th>\n",
+       "      <th>station_id</th>\n",
+       "      <th>station_latitude</th>\n",
+       "      <th>station_longitude</th>\n",
+       "      <th>station_vincenty</th>\n",
+       "      <th>station_great_circle</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>air_0f0cdeee6c9bf3d7</td>\n",
+       "      <td>Italian/French</td>\n",
+       "      <td>Hyōgo-ken Kōbe-shi Kumoidōri</td>\n",
+       "      <td>34.695124</td>\n",
+       "      <td>135.197853</td>\n",
+       "      <td>\"34.6951242\"</td>\n",
+       "      <td>\"135.1978525\"</td>\n",
+       "      <td>hyogo__kobe-kana__koube</td>\n",
+       "      <td>34.696667</td>\n",
+       "      <td>135.211667</td>\n",
+       "      <td>1.277232</td>\n",
+       "      <td>1.274882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>air_7cc17a324ae5c7dc</td>\n",
+       "      <td>Italian/French</td>\n",
+       "      <td>Hyōgo-ken Kōbe-shi Kumoidōri</td>\n",
+       "      <td>34.695124</td>\n",
+       "      <td>135.197853</td>\n",
+       "      <td>\"34.6951242\"</td>\n",
+       "      <td>\"135.1978525\"</td>\n",
+       "      <td>hyogo__kobe-kana__koube</td>\n",
+       "      <td>34.696667</td>\n",
+       "      <td>135.211667</td>\n",
+       "      <td>1.277232</td>\n",
+       "      <td>1.274882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>air_fee8dcf4d619598e</td>\n",
+       "      <td>Italian/French</td>\n",
+       "      <td>Hyōgo-ken Kōbe-shi Kumoidōri</td>\n",
+       "      <td>34.695124</td>\n",
+       "      <td>135.197853</td>\n",
+       "      <td>\"34.6951242\"</td>\n",
+       "      <td>\"135.1978525\"</td>\n",
+       "      <td>hyogo__kobe-kana__koube</td>\n",
+       "      <td>34.696667</td>\n",
+       "      <td>135.211667</td>\n",
+       "      <td>1.277232</td>\n",
+       "      <td>1.274882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>air_a17f0778617c76e2</td>\n",
+       "      <td>Italian/French</td>\n",
+       "      <td>Hyōgo-ken Kōbe-shi Kumoidōri</td>\n",
+       "      <td>34.695124</td>\n",
+       "      <td>135.197853</td>\n",
+       "      <td>\"34.6951242\"</td>\n",
+       "      <td>\"135.1978525\"</td>\n",
+       "      <td>hyogo__kobe-kana__koube</td>\n",
+       "      <td>34.696667</td>\n",
+       "      <td>135.211667</td>\n",
+       "      <td>1.277232</td>\n",
+       "      <td>1.274882</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>air_83db5aff8f50478e</td>\n",
+       "      <td>Italian/French</td>\n",
+       "      <td>Tōkyō-to Minato-ku Shibakōen</td>\n",
+       "      <td>35.658068</td>\n",
+       "      <td>139.751599</td>\n",
+       "      <td>\"35.6580681\"</td>\n",
+       "      <td>\"139.7515992\"</td>\n",
+       "      <td>tokyo__tokyo-kana__tonokyo</td>\n",
+       "      <td>35.691667</td>\n",
+       "      <td>139.750000</td>\n",
+       "      <td>3.730672</td>\n",
+       "      <td>3.739835</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           air_store_id  air_genre_name                 air_area_name  \\\n",
+       "0  air_0f0cdeee6c9bf3d7  Italian/French  Hyōgo-ken Kōbe-shi Kumoidōri   \n",
+       "1  air_7cc17a324ae5c7dc  Italian/French  Hyōgo-ken Kōbe-shi Kumoidōri   \n",
+       "2  air_fee8dcf4d619598e  Italian/French  Hyōgo-ken Kōbe-shi Kumoidōri   \n",
+       "3  air_a17f0778617c76e2  Italian/French  Hyōgo-ken Kōbe-shi Kumoidōri   \n",
+       "4  air_83db5aff8f50478e  Italian/French  Tōkyō-to Minato-ku Shibakōen   \n",
+       "\n",
+       "    latitude   longitude  latitude_str  longitude_str  \\\n",
+       "0  34.695124  135.197853  \"34.6951242\"  \"135.1978525\"   \n",
+       "1  34.695124  135.197853  \"34.6951242\"  \"135.1978525\"   \n",
+       "2  34.695124  135.197853  \"34.6951242\"  \"135.1978525\"   \n",
+       "3  34.695124  135.197853  \"34.6951242\"  \"135.1978525\"   \n",
+       "4  35.658068  139.751599  \"35.6580681\"  \"139.7515992\"   \n",
+       "\n",
+       "                   station_id  station_latitude  station_longitude  \\\n",
+       "0     hyogo__kobe-kana__koube         34.696667         135.211667   \n",
+       "1     hyogo__kobe-kana__koube         34.696667         135.211667   \n",
+       "2     hyogo__kobe-kana__koube         34.696667         135.211667   \n",
+       "3     hyogo__kobe-kana__koube         34.696667         135.211667   \n",
+       "4  tokyo__tokyo-kana__tonokyo         35.691667         139.750000   \n",
+       "\n",
+       "   station_vincenty  station_great_circle  \n",
+       "0          1.277232              1.274882  \n",
+       "1          1.277232              1.274882  \n",
+       "2          1.277232              1.274882  \n",
+       "3          1.277232              1.274882  \n",
+       "4          3.730672              3.739835  "
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "path3 = 'weather/air_store_info_with_nearest_active_station.csv'\n",
+    "air_store_info = pd.read_csv(path3)\n",
+    "air_store_info.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7e00e537",
+   "metadata": {},
+   "source": [
+    "### 2.4 `File submission.csv`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0dec5755",
+   "metadata": {},
+   "source": [
+    "- **Input:** cho ta dữ liệu một tập test\n",
+    "- **Output:**  cho ta dữ liệu với cột 'air_store_id' sẽ là id của cửa hàng và 'visit_date' là ngày có khách"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4b0de849",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>visitors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>air_00a91d42b08b08d9_2017-04-23</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>air_00a91d42b08b08d9_2017-04-24</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>air_00a91d42b08b08d9_2017-04-25</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>air_00a91d42b08b08d9_2017-04-26</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>air_00a91d42b08b08d9_2017-04-27</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                id  visitors\n",
+       "0  air_00a91d42b08b08d9_2017-04-23         0\n",
+       "1  air_00a91d42b08b08d9_2017-04-24         0\n",
+       "2  air_00a91d42b08b08d9_2017-04-25         0\n",
+       "3  air_00a91d42b08b08d9_2017-04-26         0\n",
+       "4  air_00a91d42b08b08d9_2017-04-27         0"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "submission = pd.read_csv('data/sample_submission.csv')\n",
+    "submission.head()"
+   ]
   }
  ],
  "metadata": {
