--- a/report.ipynb
+++ b/report.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "id": "6366fb0f",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "0a55c4b1",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "9  air_ba937bf13d40fb24  2016-01-23        26"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "58ea53c7",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "9  air_00a91d42b08b08d9  2016-07-10         0"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "3d93ef27",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
        "4  2016-01-05     Tuesday           0           0.0            0.0"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "fb7a774f",
    "metadata": {},
    "outputs": [
@@ -581,7 +581,7 @@
        "4          3.730672              3.739835  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -611,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "id": "4b0de849",
    "metadata": {},
    "outputs": [
@@ -638,6 +638,9 @@
        "      <th></th>\n",
        "      <th>id</th>\n",
        "      <th>visitors</th>\n",
+       "      <th>air_store_id</th>\n",
+       "      <th>visit_date</th>\n",
+       "      <th>is_test</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -645,48 +648,74 @@
        "      <th>0</th>\n",
        "      <td>air_00a91d42b08b08d9_2017-04-23</td>\n",
        "      <td>0</td>\n",
+       "      <td>air_00a91d42b08b08d9</td>\n",
+       "      <td>2017-04-23</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>air_00a91d42b08b08d9_2017-04-24</td>\n",
        "      <td>0</td>\n",
+       "      <td>air_00a91d42b08b08d9</td>\n",
+       "      <td>2017-04-24</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>air_00a91d42b08b08d9_2017-04-25</td>\n",
        "      <td>0</td>\n",
+       "      <td>air_00a91d42b08b08d9</td>\n",
+       "      <td>2017-04-25</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>air_00a91d42b08b08d9_2017-04-26</td>\n",
        "      <td>0</td>\n",
+       "      <td>air_00a91d42b08b08d9</td>\n",
+       "      <td>2017-04-26</td>\n",
+       "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>air_00a91d42b08b08d9_2017-04-27</td>\n",
        "      <td>0</td>\n",
+       "      <td>air_00a91d42b08b08d9</td>\n",
+       "      <td>2017-04-27</td>\n",
+       "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                id  visitors\n",
-       "0  air_00a91d42b08b08d9_2017-04-23         0\n",
-       "1  air_00a91d42b08b08d9_2017-04-24         0\n",
-       "2  air_00a91d42b08b08d9_2017-04-25         0\n",
-       "3  air_00a91d42b08b08d9_2017-04-26         0\n",
-       "4  air_00a91d42b08b08d9_2017-04-27         0"
+       "                                id  visitors          air_store_id visit_date  \\\n",
+       "0  air_00a91d42b08b08d9_2017-04-23         0  air_00a91d42b08b08d9 2017-04-23   \n",
+       "1  air_00a91d42b08b08d9_2017-04-24         0  air_00a91d42b08b08d9 2017-04-24   \n",
+       "2  air_00a91d42b08b08d9_2017-04-25         0  air_00a91d42b08b08d9 2017-04-25   \n",
+       "3  air_00a91d42b08b08d9_2017-04-26         0  air_00a91d42b08b08d9 2017-04-26   \n",
+       "4  air_00a91d42b08b08d9_2017-04-27         0  air_00a91d42b08b08d9 2017-04-27   \n",
+       "\n",
+       "   is_test  \n",
+       "0        0  \n",
+       "1        1  \n",
+       "2        2  \n",
+       "3        3  \n",
+       "4        4  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "submission = pd.read_csv('data/sample_submission.csv')\n",
-    "submission.head()"
+    "submission['air_store_id'] = submission['id'].str.slice(0,20)\n",
+    "submission['visit_date'] = submission['id'].str.slice(21)\n",
+    "submission['visit_date'] = pd.to_datetime(submission['visit_date'])\n",
+    "submission['is_test'] = submission.index\n",
+    "submission.head()\n"
    ]
   }
  ],
