--- a/report.ipynb
+++ b/report.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "6366fb0f",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "0a55c4b1",
    "metadata": {},
    "outputs": [
@@ -149,7 +149,7 @@
        "9  air_ba937bf13d40fb24  2016-01-23        26"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "58ea53c7",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "9  air_00a91d42b08b08d9  2016-07-10         0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -314,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3d93ef27",
    "metadata": {},
    "outputs": [
@@ -400,7 +400,7 @@
        "4  2016-01-05     Tuesday           0           0.0            0.0"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "fb7a774f",
    "metadata": {},
    "outputs": [
@@ -581,7 +581,7 @@
        "4          3.730672              3.739835  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,12 +606,13 @@
    "metadata": {},
    "source": [
     "- **Input:** cho ta dữ liệu một tập test\n",
-    "- **Output:**  cho ta dữ liệu với cột 'air_store_id' sẽ là id của cửa hàng và 'visit_date' là ngày có khách"
+    "- **Output:**  cho ta dữ liệu với cột 'air_store_id' sẽ là id của cửa hàng và 'visit_date' là ngày có khách\n",
+    "- **Phương pháp:** dùng str.slice để cắt id cửa hàng và ngày có khách từ cột id"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "4b0de849",
    "metadata": {},
    "outputs": [
@@ -641,47 +642,53 @@
        "      <th>air_store_id</th>\n",
        "      <th>visit_date</th>\n",
        "      <th>is_test</th>\n",
+       "      <th>is_number</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>air_00a91d42b08b08d9_2017-04-23</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>air_00a91d42b08b08d9</td>\n",
        "      <td>2017-04-23</td>\n",
+       "      <td>True</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>air_00a91d42b08b08d9_2017-04-24</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>air_00a91d42b08b08d9</td>\n",
        "      <td>2017-04-24</td>\n",
+       "      <td>True</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>air_00a91d42b08b08d9_2017-04-25</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>air_00a91d42b08b08d9</td>\n",
        "      <td>2017-04-25</td>\n",
+       "      <td>True</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>air_00a91d42b08b08d9_2017-04-26</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>air_00a91d42b08b08d9</td>\n",
        "      <td>2017-04-26</td>\n",
+       "      <td>True</td>\n",
        "      <td>3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>air_00a91d42b08b08d9_2017-04-27</td>\n",
-       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>air_00a91d42b08b08d9</td>\n",
        "      <td>2017-04-27</td>\n",
+       "      <td>True</td>\n",
        "      <td>4</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -689,22 +696,22 @@
        "</div>"
       ],
       "text/plain": [
-       "                                id  visitors          air_store_id visit_date  \\\n",
-       "0  air_00a91d42b08b08d9_2017-04-23         0  air_00a91d42b08b08d9 2017-04-23   \n",
-       "1  air_00a91d42b08b08d9_2017-04-24         0  air_00a91d42b08b08d9 2017-04-24   \n",
-       "2  air_00a91d42b08b08d9_2017-04-25         0  air_00a91d42b08b08d9 2017-04-25   \n",
-       "3  air_00a91d42b08b08d9_2017-04-26         0  air_00a91d42b08b08d9 2017-04-26   \n",
-       "4  air_00a91d42b08b08d9_2017-04-27         0  air_00a91d42b08b08d9 2017-04-27   \n",
+       "                                id  visitors          air_store_id  \\\n",
+       "0  air_00a91d42b08b08d9_2017-04-23       NaN  air_00a91d42b08b08d9   \n",
+       "1  air_00a91d42b08b08d9_2017-04-24       NaN  air_00a91d42b08b08d9   \n",
+       "2  air_00a91d42b08b08d9_2017-04-25       NaN  air_00a91d42b08b08d9   \n",
+       "3  air_00a91d42b08b08d9_2017-04-26       NaN  air_00a91d42b08b08d9   \n",
+       "4  air_00a91d42b08b08d9_2017-04-27       NaN  air_00a91d42b08b08d9   \n",
        "\n",
-       "   is_test  \n",
-       "0        0  \n",
-       "1        1  \n",
-       "2        2  \n",
-       "3        3  \n",
-       "4        4  "
+       "   visit_date  is_test  is_number  \n",
+       "0  2017-04-23     True          0  \n",
+       "1  2017-04-24     True          1  \n",
+       "2  2017-04-25     True          2  \n",
+       "3  2017-04-26     True          3  \n",
+       "4  2017-04-27     True          4  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -713,9 +720,63 @@
     "submission = pd.read_csv('data/sample_submission.csv')\n",
     "submission['air_store_id'] = submission['id'].str.slice(0,20)\n",
     "submission['visit_date'] = submission['id'].str.slice(21)\n",
-    "submission['visit_date'] = pd.to_datetime(submission['visit_date'])\n",
-    "submission['is_test'] = submission.index\n",
+    "submission['visit_date'] = pd.to_datetime(submission['visit_date']).dt.strftime('%Y-%m-%d')\n",
+    "submission['visitors'] = np.nan #để bỏ qua cột này\n",
+    "submission['is_test'] = True\n",
+    "submission['is_number'] = submission.index\n",
+    "\n",
     "submission.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "01a13861",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           air_store_id  visit_date  visitors is_test  is_number\n",
+      "0  air_00a91d42b08b08d9  2016-07-01      35.0     NaN        NaN\n",
+      "1  air_00a91d42b08b08d9  2016-07-02       9.0     NaN        NaN\n",
+      "2  air_00a91d42b08b08d9  2016-07-03       0.0     NaN        NaN\n",
+      "3  air_00a91d42b08b08d9  2016-07-04      20.0     NaN        NaN\n",
+      "4  air_00a91d42b08b08d9  2016-07-05      25.0     NaN        NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "#xóa cột id\n",
+    "data = pd.concat((air_visit, submission.drop(['id'], axis = 'columns')))\n",
+    "print(data.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3cf0086",
+   "metadata": {},
+   "source": [
+    "##"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3acf041a",
+   "metadata": {},
+   "source": [
+    "### 2.5 Merge dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c4f0a54",
+   "metadata": {},
+   "source": [
+    "- **Input:** ta sẽ có các file train như `air_visit.csv`, `air_store_info.csv` và file test `submission.csv`\n",
+    "- **Output:** ta sẽ nhận được một file gộp lại\n",
+    "- **Mục đích:** để khi đưa vào mô hình thì mô hình sẽ thông qua các thuộc tính để học và dự đoán"
    ]
   }
  ],
