--- a/report.ipynb
+++ b/report.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "6366fb0f",
    "metadata": {},
    "outputs": [],
@@ -21,10 +21,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b8817600",
+   "metadata": {},
+   "source": [
+    "### 2.1. Dữ liệu nhà hàng"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "da72f64b",
    "metadata": {},
    "source": [
-    "### 2.1. File `air_visit_data.csv`"
+    "#### 2.1.1. File `air_visit_data.csv`"
    ]
   },
   {
@@ -40,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "0a55c4b1",
    "metadata": {},
    "outputs": [
@@ -149,7 +157,7 @@
        "9  air_ba937bf13d40fb24  2016-01-23        26"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "58ea53c7",
    "metadata": {},
    "outputs": [
@@ -190,6 +198,7 @@
        "      <th>air_store_id</th>\n",
        "      <th>visit_date</th>\n",
        "      <th>visitors</th>\n",
+       "      <th>was_nil</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -197,81 +206,91 @@
        "      <th>0</th>\n",
        "      <td>air_00a91d42b08b08d9</td>\n",
        "      <td>2016-07-01</td>\n",
-       "      <td>35</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>air_00a91d42b08b08d9</td>\n",
        "      <td>2016-07-02</td>\n",
-       "      <td>9</td>\n",
+       "      <td>9.0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>air_00a91d42b08b08d9</td>\n",
        "      <td>2016-07-03</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>air_00a91d42b08b08d9</td>\n",
        "      <td>2016-07-04</td>\n",
-       "      <td>20</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>air_00a91d42b08b08d9</td>\n",
        "      <td>2016-07-05</td>\n",
-       "      <td>25</td>\n",
+       "      <td>25.0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>air_00a91d42b08b08d9</td>\n",
        "      <td>2016-07-06</td>\n",
-       "      <td>29</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>air_00a91d42b08b08d9</td>\n",
        "      <td>2016-07-07</td>\n",
-       "      <td>34</td>\n",
+       "      <td>34.0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
        "      <td>air_00a91d42b08b08d9</td>\n",
        "      <td>2016-07-08</td>\n",
-       "      <td>42</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
        "      <td>air_00a91d42b08b08d9</td>\n",
        "      <td>2016-07-09</td>\n",
-       "      <td>11</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
        "      <td>air_00a91d42b08b08d9</td>\n",
        "      <td>2016-07-10</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>True</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "           air_store_id  visit_date  visitors\n",
-       "0  air_00a91d42b08b08d9  2016-07-01        35\n",
-       "1  air_00a91d42b08b08d9  2016-07-02         9\n",
-       "2  air_00a91d42b08b08d9  2016-07-03         0\n",
-       "3  air_00a91d42b08b08d9  2016-07-04        20\n",
-       "4  air_00a91d42b08b08d9  2016-07-05        25\n",
-       "5  air_00a91d42b08b08d9  2016-07-06        29\n",
-       "6  air_00a91d42b08b08d9  2016-07-07        34\n",
-       "7  air_00a91d42b08b08d9  2016-07-08        42\n",
-       "8  air_00a91d42b08b08d9  2016-07-09        11\n",
-       "9  air_00a91d42b08b08d9  2016-07-10         0"
+       "           air_store_id  visit_date  visitors  was_nil\n",
+       "0  air_00a91d42b08b08d9  2016-07-01      35.0    False\n",
+       "1  air_00a91d42b08b08d9  2016-07-02       9.0    False\n",
+       "2  air_00a91d42b08b08d9  2016-07-03       0.0     True\n",
+       "3  air_00a91d42b08b08d9  2016-07-04      20.0    False\n",
+       "4  air_00a91d42b08b08d9  2016-07-05      25.0    False\n",
+       "5  air_00a91d42b08b08d9  2016-07-06      29.0    False\n",
+       "6  air_00a91d42b08b08d9  2016-07-07      34.0    False\n",
+       "7  air_00a91d42b08b08d9  2016-07-08      42.0    False\n",
+       "8  air_00a91d42b08b08d9  2016-07-09      11.0    False\n",
+       "9  air_00a91d42b08b08d9  2016-07-10       0.0     True"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,6 +299,8 @@
     "air_visit.index = pd.to_datetime(air_visit['visit_date'])\n",
     "air_visit = air_visit.groupby('air_store_id').apply(lambda data: data['visitors'].resample('1d').sum(), include_groups=False).reset_index()\n",
     "air_visit['visit_date'] = air_visit['visit_date'].dt.strftime('%Y-%m-%d') #chuyen dang YYYY-mm-dd\n",
+    "air_visit.replace(0, np.nan, inplace=True)\n",
+    "air_visit['was_nil'] = air_visit['visitors'].isnull()\n",
     "air_visit.fillna({'visitors': 0}, inplace = True) #ignore\n",
     "\n",
     "air_visit.head(10)"
@@ -298,7 +319,7 @@
    "id": "a0c8b3fb",
    "metadata": {},
    "source": [
-    "### 2.2. `File date_info.csv`"
+    "#### 2.1.2 `File date_info.csv`"
    ]
   },
   {
@@ -314,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "3d93ef27",
    "metadata": {},
    "outputs": [
@@ -400,7 +421,7 @@
        "4  2016-01-05     Tuesday           0           0.0            0.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +439,7 @@
    "id": "e556918c",
    "metadata": {},
    "source": [
-    "### 2.3. `File air_store_info.csv`"
+    "#### 2.1.3 `File air_store_info.csv`"
    ]
   },
   {
@@ -432,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "fb7a774f",
    "metadata": {},
    "outputs": [
@@ -581,7 +602,7 @@
        "4          3.730672              3.739835  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +618,7 @@
    "id": "7e00e537",
    "metadata": {},
    "source": [
-    "### 2.4 `File submission.csv`"
+    "#### 2.1.4 `File submission.csv`"
    ]
   },
   {
@@ -612,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "4b0de849",
    "metadata": {},
    "outputs": [
@@ -711,7 +732,7 @@
        "4  2017-04-27     True          4  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 7,
    "id": "01a13861",
    "metadata": {},
    "outputs": [
@@ -738,19 +759,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "           air_store_id  visit_date  visitors is_test  is_number\n",
-      "0  air_00a91d42b08b08d9  2016-07-01      35.0     NaN        NaN\n",
-      "1  air_00a91d42b08b08d9  2016-07-02       9.0     NaN        NaN\n",
-      "2  air_00a91d42b08b08d9  2016-07-03       0.0     NaN        NaN\n",
-      "3  air_00a91d42b08b08d9  2016-07-04      20.0     NaN        NaN\n",
-      "4  air_00a91d42b08b08d9  2016-07-05      25.0     NaN        NaN\n"
+      "   visitors          air_store_id  visit_date  is_test  is_number\n",
+      "0       NaN  air_00a91d42b08b08d9  2017-04-23     True          0\n",
+      "1       NaN  air_00a91d42b08b08d9  2017-04-24     True          1\n",
+      "2       NaN  air_00a91d42b08b08d9  2017-04-25     True          2\n",
+      "3       NaN  air_00a91d42b08b08d9  2017-04-26     True          3\n",
+      "4       NaN  air_00a91d42b08b08d9  2017-04-27     True          4\n"
      ]
     }
    ],
    "source": [
     "#xóa cột id\n",
-    "data = pd.concat((air_visit, submission.drop(['id'], axis = 'columns')))\n",
-    "print(data.head())"
+    "submission = submission.drop(['id'], axis = 'columns')\n",
+    "print(submission.head())"
    ]
   },
   {
@@ -766,7 +787,7 @@
    "id": "3acf041a",
    "metadata": {},
    "source": [
-    "### 2.5 Merge dataset"
+    "#### 2.1.5 Merge dataset"
    ]
   },
   {
@@ -778,6 +799,64 @@
     "- **Output:** ta sẽ nhận được một file gộp lại\n",
     "- **Mục đích:** để khi đưa vào mô hình thì mô hình sẽ thông qua các thuộc tính để học và dự đoán"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "a44cee37",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "object\n",
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 328298 entries, 0 to 328297\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column                Non-Null Count   Dtype  \n",
+      "---  ------                --------------   -----  \n",
+      " 0   air_store_id          328298 non-null  object \n",
+      " 1   visit_date            328298 non-null  object \n",
+      " 2   visitors              296279 non-null  float64\n",
+      " 3   was_nil               296279 non-null  object \n",
+      " 4   is_test               328298 non-null  bool   \n",
+      " 5   is_number             32019 non-null   float64\n",
+      " 6   day_of_week           328298 non-null  object \n",
+      " 7   is_holiday            328298 non-null  int64  \n",
+      " 8   prev_holiday          328298 non-null  float64\n",
+      " 9   after_holiday         328298 non-null  float64\n",
+      " 10  air_genre_name        328298 non-null  object \n",
+      " 11  air_area_name         328298 non-null  object \n",
+      " 12  latitude              328298 non-null  float64\n",
+      " 13  longitude             328298 non-null  float64\n",
+      " 14  latitude_str          328298 non-null  object \n",
+      " 15  longitude_str         328298 non-null  object \n",
+      " 16  station_id            328298 non-null  object \n",
+      " 17  station_latitude      328298 non-null  float64\n",
+      " 18  station_longitude     328298 non-null  float64\n",
+      " 19  station_vincenty      328298 non-null  float64\n",
+      " 20  station_great_circle  328298 non-null  float64\n",
+      "dtypes: bool(1), float64(10), int64(1), object(9)\n",
+      "memory usage: 50.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data = pd.concat((air_visit, submission))\n",
+    "print(data['is_test'].dtype)\n",
+    "data['is_test']  = data['is_test'].fillna(False).astype('bool') #vì cột khi ép có type là object, dùng astype để chuyển sang boolean\n",
+    "data = pd.merge(left = data, right = date_info, on = 'visit_date', how = 'left')\n",
+    "data = pd.merge(left = data, right = air_store_info, on = 'air_store_id', how = 'left')\n",
+    "data['visitors'] = data['visitors'].astype(float)\n",
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "395746f5",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
