--- a/report.ipynb
+++ b/report.ipynb
@@ -1795,6 +1795,24 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "92684ae1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def findOutlier(data):\n",
+    "    q1 = np.quantile(data, 0.25)\n",
+    "    q3 = np.quantile(data, 0.75)\n",
+    "    iqr = q3 - q1\n",
+    "    return (data < (q1 - 1.5*iqr)) | (data > (q1 + 1.5*iqr))\n",
+    "def replace_outlier(data):\n",
+    "    outlier = findOutlier(data)\n",
+    "    max = data[~outlier].max()\n",
+    "    data[outlier] = max"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "395746f5",
    "metadata": {},
