--- a/report.ipynb
+++ b/report.ipynb
@@ -1809,7 +1809,59 @@
     "def replace_outlier(data):\n",
     "    outlier = findOutlier(data)\n",
     "    max = data[~outlier].max()\n",
-    "    data[outlier] = max"
+    "    data[outlier] = max\n",
+    "    return data\n",
+    "\n",
+    "store = data.groupby('air_store_id')\n",
+    "data['outlier'] = store.aplly(lambda g: findOutlier(g['visitors']))\n",
+    "data['replace_visitors'] = store.apply(lambda g: replace_outlier(g['visitors'])).values\n",
+    "data['replace_visitor_log1'] = np.log1p(data['replace_visitors'])\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "080f9279",
+   "metadata": {},
+   "source": [
+    "### 2.2.2 Trích xuất các đặc trưng khác"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cbef14c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data['weekend'] = data['day_of_week'],isin(['Saturday', 'Sunday']).astype(int)\n",
+    "data['day_of_month'] = data['visit_date'].dt.day"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c7c88343",
+   "metadata": {},
+   "source": [
+    "### 2.2.3 Trọng số theo cấp số nhân cho số lượng khách hàng"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "73c21130",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy import optimize\n",
+    "def cal_ewm(data, alpha, adjust = False):\n",
+    "    return data.ewm(alpha = alpha, adjust = adjust).mean()\n",
+    "def find_best_alpha(data, alpha, adjust = False):\n",
+    "    def f(data):\n",
+    "        ewm_estimate = cal_ewm(data, alpha = alpha, adjust= adjust)\n",
+    "        error = np.mean((data - ewm_estimate)**2)\n",
+    "        return error\n",
+    "    best = optimize."
    ]
   },
   {
@@ -1821,7 +1873,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "venv",
    "language": "python",
    "name": "python3"
   },
@@ -1835,7 +1887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
