--- a/report.ipynb
+++ b/report.ipynb
@@ -1834,7 +1834,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data['weekend'] = data['day_of_week'],isin(['Saturday', 'Sunday']).astype(int)\n",
+    "data['weekend'] = data['day_of_week'].isin(['Saturday', 'Sunday']).astype(int)\n",
     "data['day_of_month'] = data['visit_date'].dt.day"
    ]
   },
@@ -1856,12 +1856,15 @@
     "from scipy import optimize\n",
     "def cal_ewm(data, alpha, adjust = False):\n",
     "    return data.ewm(alpha = alpha, adjust = adjust).mean()\n",
-    "def find_best_alpha(data, alpha, adjust = False):\n",
-    "    def f(data):\n",
-    "        ewm_estimate = cal_ewm(data, alpha = alpha, adjust= adjust)\n",
+    "def find_best_alpha(data, adjust = False, eps = 10e-5):\n",
+    "    def f(alpha):\n",
+    "        ewm_estimate = cal_ewm(data, alpha = min(max(alpha, 0), 1), adjust= adjust)\n",
     "        error = np.mean((data - ewm_estimate)**2)\n",
     "        return error\n",
-    "    best = optimize."
+    "    best = optimize.differential_evolution(f, bounds = [(0 + eps, 1 - eps)])\n",
+    "    return cal_ewm(data, alpha = best['x'][0], adjust = adjust)\n",
+    "\n",
+    "group = data.groupby(['air_store_id', 'day_of_week']).apply(lambda g: find_best_alpha(g['replace_visitor']))"
    ]
   },
   {
