--- a/report.ipynb
+++ b/report.ipynb
@@ -28,8 +28,8 @@
     "- **Link kaggle:** https://www.kaggle.com/competitions/recruit-restaurant-visitor-forecasting/overview\n",
     "- **Cách chấm điểm:** Thông qua Root Mean Squared Logarithmic Error (RMSLE):\n",
     "        $$\\sqrt{\\frac{1}{n}\\sum^N_{i = 1}(log(p_i + 1) - log(a_i + 1))^2}$$\n",
-    "        với n là tổng số quan sát\n",
-    "            $p_i$ là số khách hàng mình dự đoán\n",
+    "        với n là tổng số quan sát $\\newline$\n",
+    "            $p_i$ là số khách hàng mình dự đoán $\\newline$\n",
     "            $a_i$ là số khách hàng thực tế\n"
    ]
   },
@@ -62,7 +62,15 @@
    "id": "9d291ccd",
    "metadata": {},
    "source": [
-    "## 2. Giải quyết vấn đề"
+    "## 2. Giải quyết dữ liệu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "011ebd76",
+   "metadata": {},
+   "source": [
+    "### Những thư viện cần thiết"
    ]
   },
   {
@@ -3688,7 +3696,7 @@
    "id": "324c4606",
    "metadata": {},
    "source": [
-    "LightGBM + KFold"
+    "### 3.3.LightGBM + KFold"
    ]
   },
   {
@@ -3818,7 +3826,7 @@
    "id": "a1e1eb8c",
    "metadata": {},
    "source": [
-    "Xuất ra file kết quả Submission"
+    "### 3.4.Xuất ra file kết quả Submission"
    ]
   },
   {
@@ -3907,33 +3915,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04dae219",
+   "id": "8037d97e",
    "metadata": {},
    "source": [
-    "Hiển thị kết quả"
+    "### 4. Đề xuất cải tiến\n",
+    "- Cải tiến về data:\n",
+    "    - Trích chọn dữ liệu thời tiết, ta thu thập thông tin về nhiệt độ trung bình trên toàn bộ dữ liệu. Nếu có thời gian nhóm sẽ nghiên cứu thu thập dữ liệu theo từng vùng cụ thể để nhằm tăng độ chính xác cho thông tin thời tiết tại một khu vực cụ thể.\n",
+    "- Cải tiến về mô hình:\n",
+    "    - Nếu có thời gian thì nhóm sẽ tìm hiểu thêm các mô hình khác"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "60b7d1f5",
+   "cell_type": "markdown",
+   "id": "e23c7f72",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### 5. Những nguồn tham khảo"
+   ]
   },
   {
    "cell_type": "markdown",
    "id": "fb76653e",
    "metadata": {},
    "source": [
-    "https://lightgbm.readthedocs.io/en/latest/index.html"
+    "1. https://www.kaggle.com/competitions/recruit-restaurant-visitor-forecasting/data\n",
+    "2. https://lightgbm.readthedocs.io/en/latest/index.html\n",
+    "3. https://www.geeksforgeeks.org/data-science/log-transformation/\n",
+    "4. https://github.com/MaxHalford/kaggle-recruit-restaurant/tree/master\n",
+    "5. https://www.w3schools.com/statistics/statistics_standard_normal_distribution.php\n",
+    "6. https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.KFold.html\n",
+    "7. https://www.geeksforgeeks.org/data-science/log-transformation/"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "395746f5",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
