--- a/report.ipynb
+++ b/report.ipynb
@@ -2,6 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "12f5da4f",
+   "metadata": {},
+   "source": [
+    "## Thành viên nhóm:\n",
+    "1. Nguyễn Đặng Văn Cảnh, MSSV: 23110135\n",
+    "2. Phạm Ngọc Hào, MSSV: 23110146\n",
+    "3. Võ Đoàn Nguyên Lộc, MSSV: 23110098"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "bd7b5292",
    "metadata": {},
    "source": [
@@ -28,8 +39,8 @@
     "- **Link kaggle:** https://www.kaggle.com/competitions/recruit-restaurant-visitor-forecasting/overview\n",
     "- **Cách chấm điểm:** Thông qua Root Mean Squared Logarithmic Error (RMSLE):\n",
     "        $$\\sqrt{\\frac{1}{n}\\sum^N_{i = 1}(log(p_i + 1) - log(a_i + 1))^2}$$\n",
-    "        với n là tổng số quan sát $\\newline$\n",
-    "            $p_i$ là số khách hàng mình dự đoán $\\newline$\n",
+    "        với n là tổng số quan sát,\n",
+    "            $p_i$ là số khách hàng mình dự đoán,\n",
     "            $a_i$ là số khách hàng thực tế\n"
    ]
   },
@@ -1570,7 +1581,7 @@
     "- Còn về việc vì sao lại có việc dữ liệu lại thiếu nhiều như vậy, đó là bởi vì:\n",
     "    - Một số trạm sẽ đo các đặc trưng thời tiết ở một vùng nào đó, ví dụ vùng nắng nóng thì không thể nào có tuyết rơi được và ngược lại\n",
     "    - Một số trạm sẽ đo nhiều đặc trưng nhưng cũng có trạm chỉ đo một vài đặc trưng nào đó như lượng mưa, nhiệt độ\n",
-    "    $\\newline$ $\\rightarrow$ Điều đó dẫn đến việc dữ liệu bị thiếu như vậy"
+    "    $\\rightarrow$ Điều đó dẫn đến việc dữ liệu bị thiếu như vậy"
    ]
   },
   {
@@ -2307,8 +2318,7 @@
    "source": [
     "- EWM(Exponential Weighted Mean) là một cách tính trung bình với dữ liệu càng gần với hiện tại thì càng quan trọng, nó được biểu diễn qua công thức:\n",
     "$$\\text{EWM}_t = \\alpha x_{t-1} + (1 - \\alpha)\\text{EWM}_{t-1}$$\n",
-    "- Với việc giảm dần theo hàm mũ cho thấy rằng khi dữ liệu càng về quá khứ thì dữ liệu đó không giúp gì nhiều cho dữ liệu hiện tại\n",
-    "$\\newline\\rightarrow$ giúp nắm bắt được xu hướng ngắn hạn và phản ánh được hành vi gần đây của khách hàng\n",
+    "- Với việc giảm dần theo hàm mũ cho thấy rằng khi dữ liệu càng về quá khứ thì dữ liệu đó không giúp gì nhiều cho dữ liệu hiện tại giúp nắm bắt được xu hướng ngắn hạn và phản ánh được hành vi gần đây của khách hàng\n",
     "- Ở đoạn code có một chỗ đó là **return data.shift().ewm(alpha = alpha, adjust = adjust).mean()**, mục đích của việc dùng shift() ở đây là để có thể tránh việc data leakage, nếu mà không có shift() thì chắc chắn mô hình sẽ biết được đáp án và thay vì dự đoán, mô hình sẽ \"học lõm\" dẫn đến hiệu suất huấn luyện cao một cách bất thường, nhưng lại suy giảm nghiêm trọng khi áp dụng ở tập validation hoặc dữ liệu tương lai"
    ]
   },
@@ -3421,14 +3431,10 @@
     "### 3.2. Chuẩn bị dữ liệu train, test:\n",
     "- Tạo cột visitor_log1p bằng cách lấy log transform của cột dữ liệu `visitors`\n",
     "- Với dữ liệu train:\n",
-    "    - Nhóm sẽ loại đi các dữ liệu thuộc tập test `data['is_test'], những dữ liệu bị outlier và những giá trị NULLL\n",
-    "    - Sau đó loại đi những cột không cần thiết khác\n",
-    "    - Chúng ta sẽ chia tập đầu vào X: là dữ liệu train bỏ đi cột `visitor_log1p`\n",
-    "    - Còn tập mục tiêu Y: ta chỉ lấy cột `visitor_log1p`\n",
+    "    Nhóm sẽ loại đi các dữ liệu thuộc tập test `data['is_test']`, những dữ liệu bị outlier và những giá trị NULLL. Sau đó loại đi những cột không cần thiết khác. Chúng ta sẽ chia tập đầu vào X: là dữ liệu train bỏ đi cột `visitor_log1p`. Còn tập mục tiêu Y: ta chỉ lấy cột `visitor_log1p`\n",
     "\n",
     "- Với dữ liệu test:\n",
-    "    - Ta lấy những giá trị mà `is_test` hiển thị là True\n",
-    "    - Cũng loại đi những cột không cần thiết, và X_test cũng loại đi cột `visitor_log1p`"
+    "    Ta lấy những giá trị mà `is_test` hiển thị là True. Cũng loại đi những cột không cần thiết, và X_test cũng loại đi cột `visitor_log1p`"
    ]
   },
   {
@@ -3918,11 +3924,11 @@
    "id": "8037d97e",
    "metadata": {},
    "source": [
-    "### 4. Đề xuất cải tiến\n",
-    "- Cải tiến về data:\n",
-    "    - Trích chọn dữ liệu thời tiết, ta thu thập thông tin về nhiệt độ trung bình trên toàn bộ dữ liệu. Nếu có thời gian nhóm sẽ nghiên cứu thu thập dữ liệu theo từng vùng cụ thể để nhằm tăng độ chính xác cho thông tin thời tiết tại một khu vực cụ thể.\n",
-    "- Cải tiến về mô hình:\n",
-    "    - Nếu có thời gian thì nhóm sẽ tìm hiểu thêm các mô hình khác"
+    "### 4. Kết luận và đề xuất cải tiến:\n",
+    "- Kết luận: \n",
+    "    Báo cáo đã xây dựng một quy trình hoàn chỉnh cho bài toán dự đoán số lượng khách dựa trên dữ liệu lịch sử nhà hàng. Dữ liệu được tiền xử lý theo trục thời gian, xử lý outlier và biến đổi log nhằm giảm ảnh hưởng của giá trị bất thường và phù hợp với thước đo RMSLE. Mô hình LightGBM được sử dụng kết hợp với cross-validation để đánh giá hiệu năng một cách khách quan. Kết quả cho thấy mô hình cho sai số ổn định và có khả năng dự đoán tốt trên tập validation, đáp ứng yêu cầu của bài toán\n",
+    "- Đề xuất cải tiến\n",
+    "    Trích chọn dữ liệu thời tiết, ta thu thập thông tin về nhiệt độ trung bình trên toàn bộ dữ liệu. Nếu có thời gian nhóm sẽ nghiên cứu thu thập dữ liệu theo từng vùng cụ thể để nhằm tăng độ chính xác cho thông tin thời tiết tại một khu vực cụ thể. Nếu có thời gian thì nhóm sẽ tìm hiểu thêm các mô hình khác. "
    ]
   },
   {
@@ -3930,7 +3936,7 @@
    "id": "e23c7f72",
    "metadata": {},
    "source": [
-    "### 5. Những nguồn tham khảo"
+    "### 5. Tài liệu tham khảo"
    ]
   },
   {
