--- a/report.ipynb
+++ b/report.ipynb
@@ -3715,11 +3715,7 @@
     "    - Phát triển cây theo lá: Khác với những phương pháp triển khai khác thường mở rộng cây theo từng tầng, thì LightGBM sẽ chọn là có delta loss (độ giảm tổn thất) lớn nhất để chia\n",
     "    - Thuật toán dựa trên histogram: LightGBM dùng thuật toán dựa trên histogram để tìm điểm chia tối ưu\n",
     "    - Tiết kiệm bộ nhớ\n",
-    "    - Hỗ trợ học song song với phân tán\n",
-    "\n",
-    "<div align=\"center\">\n",
-    "  <img src=\"leaf-wise.webp\" alt=\"Ảnh minh họa\" width=\"500\">\n",
-    "</div>"
+    "    - Hỗ trợ học song song với phân tán"
    ]
   },
   {
